diminuindo tamanho das imagens

--- a/css/style.css
+++ b/css/style.css
@@ -470,7 +470,7 @@ h3 {
   padding-right: 0;
 }
 .about-background-image .background-right {
-    background-image: url('../images/scedule-1.jpg');
+    background-image: url('../images/scedule-1.png');
 }
 .code-background-image .background-left {
     background-image: url('../images/bg-5.jpg');
